fix: Change icon gaps in CM

--- a/mony/src/page/consumption management/cm.css
+++ b/mony/src/page/consumption management/cm.css
@@ -744,7 +744,7 @@
 }
 
 .cm-detailRow {
-  min-height: 38px;
+  height: 55px;
   display: grid;
   grid-template-columns: 72px minmax(94px, 1fr) 82px 86px;
   align-items: center;
@@ -793,7 +793,8 @@
 .cm-categoryLegend {
   display: flex;
   flex-direction: column;
-  gap: 22px;
+  gap: 50px;
+  margin-top: 35px;
 }
 
 .cm-categoryLegendItem {
